Bug 1122846 - aria-owns attribute causes Firefox to hang, r=davidb